<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_anime_favorites_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:minHeight="146dp"
    android:padding="8dp"
    tools:background="@color/black"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageView8percentStyle"
        tools:srcCompat="@drawable/anime_poster_sample" />

    <View
        android:id="@+id/new_episode_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@drawable/rectangle_background_4dp_radius"
        android:backgroundTint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/new_episode_text"
        app:layout_constraintEnd_toEndOf="@id/poster_image"
        app:layout_constraintStart_toStartOf="@id/poster_image"
        app:layout_constraintTop_toTopOf="@id/poster_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_episode_text"
...
        app:layout_constraintStart_toStartOf="@id/poster_image"
        app:layout_constraintTop_toTopOf="@id/poster_image"
        tools:ignore="VisualLintSystemUi"
        tools:text="New episode" />

    <View
        android:id="@+id/image_info_background"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:alpha="0.5"
        android:background="@drawable/rectangle_background_4dp_radius"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/poster_image"
        app:layout_constraintEnd_toEndOf="@id/poster_image"
        app:layout_constraintStart_toStartOf="@id/poster_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/score_image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:alpha="0.8"
        android:src="@drawable/ic_score_42"
        android:tint="@color/cinnabar_500"
        app:layout_constraintBottom_toBottomOf="@id/image_info_background"
...
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/image_info_background"
        app:layout_constraintEnd_toStartOf="@id/info_type_button"
        app:layout_constraintStart_toEndOf="@id/score_image"
        app:layout_constraintTop_toTopOf="@id/image_info_background"
        tools:text="8.90" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/info_type_button"
...
        app:layout_constraintStart_toEndOf="@id/score_text"
        app:layout_constraintTop_toTopOf="@id/image_info_background"
        tools:contentDescription="Turn on the display of extra information"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/main_info_stroke"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rectangle_background_10dp_radius"
        android:backgroundTint="@color/grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:backgroundTint="@color/silver" />

    <View
        android:id="@+id/main_info_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@drawable/rectangle_background_10dp_radius"
        android:backgroundTint="@color/grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/available_episodes_info_text"
        app:layout_constraintEnd_toEndOf="@id/main_info_stroke"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toTopOf="@id/main_info_stroke"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="VisualLintSystemUi"
...
        android:gravity="start"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/release_status_barrier"
        app:layout_constraintEnd_toStartOf="@id/notification_button"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Episodes: 2 / ?" />

...
        android:id="@+id/release_status_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:barrierDirection="top"
        app:constraint_referenced_ids="release_status_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/release_status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
...
