<resources>
    <string name="loading_in_progress">Loading in progress</string>
    <string name="empty_list">You haven\'t subscribed to notifications about new anime series yet. Click on the \"Main\" menu and select something (≧◡≦) ♡</string>
    <string name="empty_list_image_description">The image of the character in the form of a cute anime girl. She is wearing a white shirt and black glasses in a simple style. She has blue hair, light white skin, long cat ears and sky-blue eyes. She opened her mouth slightly, as if trying to explain something. Cute upper fangs stick out of her mouth. Cuteee!</string>
    <string name="score_image_description">The image of the rating in the form of a star</string>
    <string name="extra_info_on_description">Turn on the display of extra information</string>
    <string name="extra_info_off_description">Turn off the display of extra information</string>
    <string name="notifications_turn_off_description">Turn off notifications</string>
    <string name="notifications_turn_on_description">Turn on notifications</string>
    <string name="episodes_viewed_minus_description">Minus one episode from the number of viewed</string>
    <string name="episodes_viewed_plus_description">Plus one episode to the number of viewed</string>
    <string name="new_episode">New episode</string>
    <string name="episodes">Episodes</string>
    <string name="search">Search</string>
    <string name="ongoing">Ongoing</string>
    <string name="announced">Announced</string>
    <string name="released">Released</string>
    <string name="next_episode">Next episode</string>
    <string name="beginning_of_the_show">Beginning of the show</string>
    <string name="show_is_finished">Show is finished</string>
    <string name="no_data">No data</string>
...
